syntax = "proto3";

package nosy;

option java_package = "com.nosy.network";

message NetworkRequest {
  string method = 1;
  string url = 2;
  map<string, string> headers = 3;
  optional string body = 4;
}

message RegisteredRequest {
  string id = 1;
}

message NetworkResponse {
  string request_id = 1;
  int32 code = 2;
  map<string, string> headers = 3;
  string body = 4; // what about json and eg images?
}

message Empty { }

service Logger {
  rpc LogRequest(NetworkRequest) returns (RegisteredRequest) {}
  rpc LogResponse(NetworkResponse) returns (Empty) {}
}